# domain-catcher

./: .gitignore  .python-version  LICENSE  README.md  TODO.md  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: implementation.md  presetation.md  presetation2.md  write-up.md
domain_catcher/: __init__.py  catcher.py  cli.py  parsers.py
tests/: simple.py  simple_api_client.py  test.bash  test.py
tests/no_ext/: Dockerfile  Makefile  test
tools/: domain-catcher.py  fetch_repos.bash  install-py-tree-sitter.py  test_grep.bash  test_treesitter.py
